- Exposed NCC_Variable interface. - Made logging optional. - Some refactoring.

--- a/Samples/HelloCC/Linux/Makefile
+++ b/Samples/HelloCC/Linux/Makefile
@@ -1,7 +1,7 @@
 
 LINKER_FLAGS = 
 
-CFLAGS = -I../../../Src/Includes/ -I../../../Src/NOMoneStdLib/Includes/ -DDESKTOP -g -MMD# g=>generate debug info. MMD=>generate dependency files.
+CFLAGS = -I../../../Src/Includes/ -I../../../Src/NOMoneStdLib/Includes/ -DNCC_VERBOSE -DDESKTOP -g -MMD# g=>generate debug info. MMD=>generate dependency files.
 
 # Clang is more picky. Using it can help us pin-point more issues.
 CC = clang
