--- a/Samples/Nand2TetrisVMTranslator/Linux/Makefile
+++ b/Samples/Nand2TetrisVMTranslator/Linux/Makefile
@@ -1,7 +1,7 @@
 
 LINKER_FLAGS = 
 
-CFLAGS = -I../../../Src/Includes/ -I../../../Src/NOMoneStdLib/Includes/ -DDESKTOP -g -MMD# g=>generate debug info. MMD=>generate dependency files.
+CFLAGS = -I../../../Src/Includes/ -I../../../Src/NOMoneStdLib/Includes/ -DNCC_VERBOSE -DDESKTOP -g -MMD# g=>generate debug info. MMD=>generate dependency files.
 
 # Clang is more picky. Using it can help us pin-point more issues.
 CC = clang
