--- a/Samples/CCodePretifierColorizer/Linux/Makefile
+++ b/Samples/CCodePretifierColorizer/Linux/Makefile
@@ -4,7 +4,7 @@ LINKER_FLAGS =
 CFLAGS = -I../../../Src/Includes/ -I../../../Src/NOMoneStdLib/Includes/ -DDESKTOP -g -MMD# g=>generate debug info. MMD=>generate dependency files.
 
 # Clang is more picky. Using it can help us pin-point more issues.
-CC = clang
+CC = clang #gcc
 
 # Optimization flags,
 #CFLAGS += -s -O3 -fdata-sections -ffunction-sections 
