- Started working towards actually printing out colored text. - Started separating language definition into separate files.

--- a/Samples/HelloCC/Android/HelloCC/app/CMakeLists.txt
+++ b/Samples/HelloCC/Android/HelloCC/app/CMakeLists.txt
@@ -13,8 +13,8 @@ cmake_minimum_required(VERSION 3.4.1)
 add_definitions(-DNMAIN=1)
 
 #FILE(GLOB             SrcCFiles ../../../../Nand2TetrisVMTranslator/Src/*.c)
-#FILE(GLOB             SrcCFiles ../../../../CCodePretifierColorizer/Src/*.c)
-FILE(GLOB             SrcCFiles ../../../Src/*.c)
+FILE(GLOB             SrcCFiles ../../../../CCodePretifierColorizer/Src/*.c)
+#FILE(GLOB             SrcCFiles ../../../Src/*.c)
 FILE(GLOB             NCCCFiles ../../../../../Src/*.c)
 FILE(GLOB StdLibAndroidCPPFiles ../../../../../Src/NOMoneStdLib/Backends/Android/Cpp/*.cpp)
 FILE(GLOB    StdLibCommonCFiles ../../../../../Src/NOMoneStdLib/*.c)
